content_script.js

--- a/popup.html
+++ b/popup.html
@@ -27,6 +27,7 @@
         min-width:400px;
       }
     </style>
+    <script type="text/javascript" src="popup.js"></script>
   </head>
   <body>
     <div id="banner">
