--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
  -->
 <html>
   <head>
+    <script src="d3/d3.min.js"></script>
     <title>Getting Started Extension's Popup</title>
     <style>
       body {
