--- a/popup.html
+++ b/popup.html
@@ -57,7 +57,7 @@
           </div>
         </section>
       </div>
-      <div class="data-group">
+      <div id="data-group">
         <div class="score-box">
           The thread score is:
           <span id="score"></span>
