update report page

--- a/report.html
+++ b/report.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <script src="datamaps.world.min.js"></script>
 
     <title>Landing Page - Start Bootstrap Theme</title>
 
@@ -76,8 +77,8 @@
                     <h2 class="section-heading">Monthly Subscriber's Report: Microsoft</h2>
                     <p class="lead"></p>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                <div id="map" class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    
                 </div>
             </div>
 
