--- a/popup.html
+++ b/popup.html
@@ -43,7 +43,10 @@
       <span id="title">Reddit Mood Analyzer</span>
     </div>
     <div id="main">
-      <div id="loading">
+      <div style="display: none;" id="error">
+        <p>Oops! Could you be on the wrong page?</p>
+      </div>
+      <div style="display: none" id="loading">
         <div id="loading-text">Please wait while we analyze</div>
         <section class="wrapper">
           <div class="spinner">
@@ -57,13 +60,13 @@
           </div>
         </section>
       </div>
-      <div id="data-group">
+      <div style="display: none;" id="data-group">
         <div class="score-box">
           The thread score is:
           <span id="score"></span>
         </div>
-        <div class="visual-box">
-          Graph here!
+        <hr/>
+        <div style="width: 200px; margin:auto;"class="visual-box">
         </div>
       </div>
     </div>
