img element points to static img folder

--- a/popup.html
+++ b/popup.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <div id="banner">
-      <img id="banner-logo" src="img/reddit-face.png"/>
+      <img id="banner-logo" src="static/img/reddit-face.png"/>
       <span id="title">Reddit Mood Analyzer</span>
     </div>
     <div id="main">
