update front end

--- a/popup.html
+++ b/popup.html
@@ -66,6 +66,7 @@
           <span id="score"></span>
         </div>
         <hr/>
+        <p>Let me give you the breakdown!</p>
         <div style="width: 200px; margin:auto;"class="visual-box">
         </div>
       </div>
